--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -571,12 +571,12 @@
           </div>
 
           <div class="row-input row-input-lg row-message-unread etiquette">
-            <label data-lid="s_message_unread_label" class="label label-lg"for="">Message non lu</label
+            <label data-lid="s_new_message_received_label" class="label label-lg"for="">Message non lu</label
             ><div class="row-select-wrap">
-              <div data-lid="s_yes" class="row-select message-unread" data-propid="message_unread" data-selectid="yes">Oui</div>
-              <div data-lid="s_no"  class="row-select message-unread" data-propid="message_unread" data-selectid="no">Non</div> 
+              <div data-lid="s_yes" class="row-select message-unread" data-propid="new_message_received" data-selectid="yes">Oui</div>
+              <div data-lid="s_no"  class="row-select message-unread" data-propid="new_message_received" data-selectid="no">Non</div> 
             </div
-             ><div data-lid="s_message_unread_desc" class="row-select-description etiquette">
+             ><div data-lid="s_new_message_received_desc" class="row-select-description etiquette">
                 Recevez un mail lorsque quelqu'un a laissé un message.
              </div>
           </div>
