--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -14,6 +14,7 @@
    transition: .2s;
    padding: 10px;
    cursor: pointer;
+   /* display: flex; */
 }
 
 .picture:hover {
@@ -113,8 +114,8 @@
   display: none;
   width: 100%;
   justify-content: flex-end;
-  padding-right: 10px;
-  margin-top: 12px;
+  padding-right: 8px;
+  margin-top: 6px;
 }
 
 .hashtag-action.--pending {
@@ -126,7 +127,7 @@
   width: 25px;
   height: 25px;
   border-radius: 30px;
-  border: 1px solid;
+  border: 1px solid #454545;
   box-sizing: border-box;
   padding-top: 6px;
   margin: 0 2px;
@@ -137,9 +138,7 @@
 
 .hashtag__action-validate {
 }
-.hashtag__action-cancel {
-
-}
+.hashtag__action-cancel {color: #FF6767;}
 
 .picture__progress-bar {
   width: 100%;
@@ -286,4 +285,25 @@
    position: absolute;
    top: 0;
    left: 0;
+}
+
+.picture.--main .picture__ribbon-main {
+  opacity: 1;
+}
+.picture__ribbon-main {
+  opacity: 0;
+  transition: all ease-out .2s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 14px;
+  width: 70%;
+  top: 140px;
+  left: 50%;
+  border-radius: 100px;
+  transform: translate(-50%,0);
+  background: rgba(27,105,236,0.75);
+  height: 26px;
 }
