--- a/public/css/src/profile/profile.css
+++ b/public/css/src/profile/profile.css
@@ -74,7 +74,7 @@
     margin-top: 6px;
     align-self: flex-end;
     background: #f9f9f9;
-    padding: 10px;
+    padding: 10px 14px;
     border-radius: 100px;
 }
 
