--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -140,7 +140,7 @@
 }
 
 
-.menu-section-segment {width: 40%;margin-top: 30px;}
+.menu-section-segment {width: 40%;margin: 30px 0 50px 0;}
 
 .segment {display: flex;justify-content: center;width: 100%;font-size: 16px;border-radius: 20px;border: 1px solid;box-sizing: border-box;}
 
