--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -138,7 +138,7 @@
 
 .hashtag__action-validate {
 }
-.hashtag__action-cancel {color: #FF6767;}
+.hashtag__action-cancel {color: #FF6767;border-color: #ff6767!important;}
 
 .picture__progress-bar {
   width: 100%;
